# hermes-tavern

./: .gitignore  CHANGELOG.md  LICENSE  README.ja.md  README.md  README.zh-CN.md  pyproject.toml
.github/workflows/: release.yml  test.yml
hermes-tavern/: SKILL.md
hermes-tavern-cards/: SKILL.md
hermes-tavern-cards/assets/: hermes_tavern-0.2.0-py3-none-any.whl
hermes-tavern-cards/references/: library-layout.md
hermes-tavern-cards/scripts/: manage_cards.sh
hermes-tavern/assets/: aldous_v2.json  hermes_tavern-0.1.0-py3-none-any.whl
hermes-tavern/references/: distillation.md  field-mapping.md  security.md  usage-recipes.md
hermes-tavern/scripts/: import_card.sh
skills/hermes-tavern/: SKILL.md
skills/hermes-tavern-cards/: SKILL.md
skills/hermes-tavern-cards/references/: library-layout.md
skills/hermes-tavern-cards/scripts/: install.sh  manage_cards.sh
skills/hermes-tavern/assets/: hermes_tavern-0.3.0-py3-none-any.whl  hermes_tavern-0.4.0-py3-none-any.whl  hermes_tavern-0.4.5-py3-none-any.whl  hermes_tavern-0.5.0-py3-none-any.whl  hermes_tavern-0.5.1-py3-none-any.whl
skills/hermes-tavern/references/: field-mapping.md  openclaw-target.md  v2-spec-summary.md
skills/hermes-tavern/scripts/: import_card.sh  uninstall.sh
skills/soultavern/: SKILL.md
skills/soultavern/assets/: soultavern-1.0.0-py3-none-any.whl
skills/soultavern/references/: field-mapping.md  library-layout.md  openclaw-identity-directive.md  openclaw-target.md  oversized-cards.md  security.md  usage-recipes.md  v2-spec-summary.md
skills/soultavern/scripts/: current.py  delete.py  finalize.py  history.py  import.py  import_card.sh  install.sh  list.py  restore.py  revert.py  switch.py  uninstall.sh  validate.py
skills/soultavern/scripts/soultavern/: __init__.py  classify.py  cli.py  library.py  parse.py  render.py  snapshots.py  staging.py  text.py
skills/soultavern/scripts/soultavern/targets/: __init__.py  base.py  generic.py  hermes.py  openclaw.py  openclaw_writers.py
src/hermes_tavern/: __init__.py  classify.py  cli.py  distill.py  extended.py  library.py  parse.py  render.py  staging.py  substitute.py
src/hermes_tavern/targets/: __init__.py  base.py  hermes.py  openclaw.py
src/hermes_tavern/templates/: HERMES.md.j2  SOUL.md.curated.j2  SOUL.md.j2  _soul_header.j2
src/soultavern/: __init__.py  cli.py  extended.py  library.py  render.py  sanitize.py  scan.py
src/soultavern/targets/: __init__.py  base.py  generic.py  openclaw.py  openclaw_writers.py
src/soultavern/templates/: AGENTS.md.openclaw.j2  HERMES.md.j2  IDENTITY.md.openclaw.j2  SOUL.md.curated.openclaw.j2  SOUL.md.j2  SOUL.md.openclaw.j2  _identity_directive.openclaw.j2
tests/: conftest.py  test_classify.py  test_cli.py  test_directors_notes.py  test_distill.py  test_distill_pipeline.py  test_extended.py  test_finalize.py  test_library.py  test_openclaw_target_e2e.py  test_openclaw_templates.py  test_openclaw_writers.py  test_parse.py  test_real_cards_smoke.py  test_render.py  test_sanitize.py  test_scan.py  test_security_render.py  test_snapshots.py  test_staging.py  test_substitute.py  test_targets.py
tests/fixtures/: v1_legacy.json  v2_full.json  v2_minimal.json  v2_with_book.json
