[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes-tavern"
version = "0.3.0"
description = "Import SillyTavern V2 character cards into Hermes-Agent as SOUL.md + HERMES.md."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "HermesTavern contributors" }]
keywords = ["hermes", "sillytavern", "character-card", "roleplay", "tavernai", "persona"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Text Processing :: Markup :: Markdown",
  "Operating System :: OS Independent",
]
dependencies = [
  "pillow>=10.0",
  "pyyaml>=6.0",
  "jinja2>=3.1",
]

[project.optional-dependencies]
dev = ["pytest>=7", "ruff>=0.4", "mypy>=1.8"]

[project.urls]
Homepage = "https://github.com/imphillip/hermes-tavern"

[project.scripts]
hermes-tavern = "hermes_tavern.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["hermes_tavern*"]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.package-data]
"hermes_tavern" = ["templates/*.j2"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_ignores = false
