[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "soultavern"
version = "1.0.0"
description = "Import SillyTavern V2 character cards into multiple agent runtimes (Hermes / OpenClaw) as SOUL.md + companion files."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "SoulTavern contributors" }]
keywords = ["soultavern", "hermes", "openclaw", "sillytavern", "character-card", "roleplay", "tavernai", "persona"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Text Processing :: Markup :: Markdown",
  "Operating System :: OS Independent",
]
dependencies = [
  "pillow>=10.0",
  "pyyaml>=6.0",
  "jinja2>=3.1",
]

[project.optional-dependencies]
dev = ["pytest>=7", "ruff>=0.4", "mypy>=1.8"]

[project.urls]
Homepage = "https://github.com/imphillip/SoulTavern"

[project.scripts]
soultavern = "soultavern.cli:main"
# Backward-compat: pre-v1.0 the binary was `hermes-tavern`. Same entry
# point, identical behavior — `--target hermes` is the default, so
# existing scripts work unchanged.
hermes-tavern = "soultavern.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["soultavern*"]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.package-data]
"soultavern" = ["templates/*.j2"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_ignores = false
