[project]
name = "soultavern"
version = "2.0.3"
description = "Skill-folder-only SillyTavern V2 character card importer for Hermes / OpenClaw / generic agent runtimes."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "SoulTavern contributors" }]
keywords = ["soultavern", "hermes", "openclaw", "sillytavern", "character-card", "roleplay", "tavernai", "persona"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Text Processing :: Markup :: Markdown",
  "Operating System :: OS Independent",
]
# v2.0: zero runtime dependencies. The package is stdlib-only and is
# distributed as a skill folder (skills/soultavern/), not as a wheel.
# pyproject.toml exists only to configure dev tooling (pytest / ruff /
# mypy). There is no [build-system] block — this project is not built.
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7", "ruff>=0.4", "mypy>=1.8"]

[project.urls]
Homepage = "https://github.com/imphillip/SoulTavern"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_ignores = false
